--- a/UserManagement.Web/Views/Home/Index.cshtml
+++ b/UserManagement.Web/Views/Home/Index.cshtml
@@ -1,7 +1,7 @@
 ﻿@using Westwind.AspNetCore.Markdown
 
 @{
-    ViewBag.Title = "Home";
+    ViewData["Title"] = "Home";
 }
 
 @Markdown.ParseHtmlStringFromFile("../../README.md")
